--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -29,6 +29,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.+'
     testCompile 'junit:junit:4.12'
-    // compile project(':PermissionLibrary')
-    compile 'com.excellence:permission:1.0.1'
+    compile project(':PermissionLibrary')
+    // compile 'com.excellence:permission:1.0.1'
 }
